--- a/react-app/src/components/DirectMessages/DirectMessages.css
+++ b/react-app/src/components/DirectMessages/DirectMessages.css
@@ -1,13 +1,13 @@
 @font-face {
-  font-family: 'ByteBud';
-  src: url('../../static/ggsans-Normal.ttf');
+  font-family: "ByteBud";
+  src: url("../../static/ggsans-Normal.ttf");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Discord Bold';
-  src: url('../../static/Uni\ Sans\ Heavy.otf');
+  font-family: "Discord Bold";
+  src: url("../../static/Uni\ Sans\ Heavy.otf");
   font-weight: normal;
   font-style: normal;
 }
@@ -18,11 +18,10 @@
   left: 298px;
   right: 0px;
   height: 50px;
-  background-color: rgb(49,51,56);
-  border-bottom: 1px rgb(30,32,36) solid;
-  font-family: ByteBud';
+  background-color: rgb(49, 51, 56);
+  border-bottom: 1px rgb(30, 32, 36) solid;
+  font-family: "ByteBud";
 }
-
 
 .dm-outer-container {
   position: fixed;
@@ -30,13 +29,15 @@
   left: 298px;
   right: 0px;
   bottom: 49px;
-  background-color: rgb(49,51,56);
-  color: rgb(179,184,191);
-  font-family: 'PixelPal';
+  background-color: rgb(49, 51, 56);
+  color: rgb(179, 184, 191);
+  font-family: "PixelPal";
 }
 
 .dm-chat-history-container {
   margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 0.5px solid rgb(109, 113, 117);
 }
 
 .dm-chat-history-pic {
@@ -52,13 +53,11 @@
   margin-left: 10px;
   margin-top: 5px;
   color: white;
-
 }
 .dm-chat-history-text {
   margin-left: 10px;
   margin-top: 10px;
 }
-
 
 .dm-upper-user-container {
   display: flex;
@@ -68,11 +67,11 @@
 }
 .dm-upper-username {
   color: rgb(193, 198, 205);
-  font-family: 'PixelPal';
+  font-family: "PixelPal";
   margin-left: 8px;
 }
 .dm-upper-at {
-  color: rgb(179,184,191);
+  color: rgb(179, 184, 191);
   font-size: 25px;
   margin-left: 20px;
 }
