--- a/react-app/src/components/FriendsList/FriendsList.css
+++ b/react-app/src/components/FriendsList/FriendsList.css
@@ -347,7 +347,9 @@
   color: rgb(179, 184, 191);
   height: 30px;
   padding: 5px;
-  margin: 5px;
+  margin-top: 8px;
+  margin-left: 8px;
+  margin-bottom: 5px;
 }
 
 .friendslist-dm-user-container:hover {
