--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -5,23 +5,32 @@
   font-style: normal;
 }
 
-.splash-top {
-  border: 2px solid poink;
-  position: fixed;
-  top: 0;
-  left: 0;
+body {
+  width: 100%;
+  height: 100vh;
+}
 
+.splash-container {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.splash-top {
   display: flex;
   align-items: center;
   justify-content: center;
-
   width: 100%;
   height: 500px;
 }
 
 .splash-top-background {
-  position: fixed;
+  position: absolute;
   top: 0;
+  left: 0;
 
   width: 100%;
   height: 500px;
@@ -30,7 +39,7 @@
 }
 
 .splash-top-nav {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
 
@@ -70,12 +79,11 @@
 
 .demo-login-button {
   font-family: "ByteBud";
+  font-size: 18px;
   color: white;
 
   background: none;
   border: none;
-
-  width: 100px;
   margin: 0px 25px 0px;
 }
 
@@ -91,7 +99,7 @@
 
 .splash-login-button {
   background-color: rgb(25, 25, 25);
-  font-size: 15px;
+  font-size: 17px;
   color: rgb(218, 99, 218);
   font-family: "ByteBud";
 
@@ -123,8 +131,8 @@
   color: white;
   font-weight: bold;
   font-size: 56px;
-
   margin: 0;
+
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: 0.15em solid rgb(210, 210, 210); /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
@@ -142,6 +150,18 @@
     width: 80%;
   }
 }
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: rgb(224, 224, 224);
+  }
+}
+
 .where-you-can-text {
   font-family: "ByteBud";
   color: white;
@@ -184,6 +204,7 @@
 
   padding: 20px 0px 20px;
   margin: 0;
+
   text-align: center;
 }
 
@@ -195,7 +216,6 @@
   flex-wrap: wrap;
 
   margin: 0px 40px 0px;
-  width: 70%;
 }
 
 @media (max-width: 1519px) {
@@ -230,7 +250,7 @@
   box-shadow: 0 0 20px #5865f2;
 }
 
-.zaineb-button:hover {
+.ray-button:hover {
   cursor: pointer;
   -webkit-box-shadow: 0 0 20px #3442d9;
   box-shadow: 0 0 20px #3442d9;
@@ -251,38 +271,8 @@
   padding: 7px;
 }
 
-.ryan-container {
-  background-image: url("../../static/SplashPage/splash-ryan.jpg");
-  background-size: cover;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-
-.aileen-container {
-  background-image: url("../../static/SplashPage/splash-aileen.jpg");
-  background-size: cover;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-
-.zaineb-container {
-  background-image: url("../../static/SplashPage/splash-zaineb.jpg");
-  background-size: cover;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-
-.ken-container {
-  background-image: url("../../static/SplashPage/splash-ken.jpg");
+.ray-container {
+  background-image: url("../../static/SplashPage/splash-ray.jpg");
   background-size: cover;
 
   display: flex;
@@ -297,20 +287,8 @@
   margin: 0;
 }
 
-.ryan-text {
-  color: #fee75b;
-}
-
-.aileen-text {
+.ray-text {
   color: #8ad9ff;
-}
-
-.zaineb-text {
-  color: #29cc7b;
-}
-
-.kenny-text {
-  color: #ff78ba;
 }
 
 .dev-social-media-container {
@@ -340,10 +318,6 @@
 }
 
 .splash-bottom {
-  position: fixed;
-  bottom: 0;
-  left: 0px;
-
   display: flex;
   align-items: center;
   justify-content: center;
